--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Digvijay's Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="styless.css">
-    <!-- <script src="https://kit.fontawesome.com/7f4cf20331.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/7f4cf20331.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,7 +22,7 @@
         <div class="Right1">
             <div class="Hamburger" onclick="toggleMenu()">&#9776;</div>
             <nav class="Nav">
-                <ul class="List">
+                <ul>
                     <li><a href="#Home" class="Active">Home</a></li>
                     <li><a href="#About">About</a></li>
                     <li><a href="#Education">Education</a></li>
@@ -41,7 +40,8 @@
             <div class="Container">
                 <div>
                     <h1 class="H1-MAIN">Hi,<br> I'm <span>Digvijay Rajebhosale....</span></h1>
-                    <p>This is My Official Portfolio Website To Showcase My Work Related To Web Development. <br> I'M Recent graduate looking for an opportunity in web development.</p><br>
+                    <p>This is My Official Portfolio Website To Showcase My Work Related To Web Development. <br> I'M
+                        Recent graduate looking for an opportunity in web development.</p><br>
                     <button class="HeadBTN"><a href="DIGVIJAY_RAJEBHOSALE_BE_2023.pdf" download>DOWNLOAD
                             CV</a></button><br><br>
                     <div class="LOGOS">
@@ -49,7 +49,8 @@
                             target="_blank"><img src="Images/pngwing.com(14).png" alt="" class="LOGO"></a>
                         <a href="https://www.linkedin.com/in/digvijay-rajebhosale-91474a238/" target="_blank"><img
                                 src="Images/pngwing.com (8).png" alt="" class="LOGO"></a>
-                        <a href=""><img src="Images/pngwing.com(15).png" alt="" height="45px" width="45px" class="LOGO"></a>
+                        <a href=""><img src="Images/pngwing.com(15).png" alt="" height="45px" width="45px"
+                                class="LOGO"></a>
 
                     </div>
                 </div>
@@ -119,39 +120,32 @@
                 <div class="container-Edu">
                     <ul>
                         <li>
-                            <h3 class="title">Ajeenkya D Y Patil School Of Engineering</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus ipsam commodi qui optio
-                                rerum
-                                sint? Culpa nam optio eveniet perferendis?</p>
+                            <h3 class="title titlee">Ajeenkya D Y Patil School Of Engineering</h3>
+                            <p class="paragraphe">I Have Completed My Bachlor Of Engineering In Computer Science At
+                                Ajeenkya D Y Patil School Of Engineering With 8.08 SGPA With First Class With
+                                Distinction </p>
                             <a href="#">Read more..</a>
-                            <span class="circle"></span>
                             <span class="date">2023</span>
                         </li>
                         <li>
                             <h3 class="title">Nutan Jr College,Kuldharan,Karjat</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus ipsam commodi qui optio
-                                rerum
-                                sint? Culpa nam optio eveniet perferendis?</p>
+                            <p class="paragraphe">I Have Completed My HSC From Nutan Jr College Kuldharan,Karjat With
+                                75.06%</p>
                             <a href="#">Read more..</a>
-                            <span class="circle"></span>
                             <span class="date">2019</span>
                         </li>
                         <li>
                             <h3 class="title">Mahatma Gandhi Vidialaya,Karjat</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus ipsam commodi qui optio
-                                rerum
-                                sint? Culpa nam optio eveniet perferendis?</p>
+                            <p class="paragraphe">I Have Completed My SSC From The Mahatma Gandhi Vidialaya Karjat With
+                                85.00% </p>
                             <a href="#">Read more..</a>
-                            <span class="circle"></span>
                             <span class="date">2017</span>
                         </li>
                         <li>
                             <h3 class="title">Shri Ravishankar Vidyamandir,Karjat</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus ipsam commodi qui optio
-                                rerum
-                                sint? Culpa nam optio eveniet perferendis?</p>
+                            <p class="paragraphe">I Had Done My Education Of Junior-KG To 4th From Shri Ravishankar
+                                Vidyamandir,Karjat</p>
                             <a href="#">Read more..</a>
-                            <span class="circle"></span>
                             <span class="date">2010</span>
                         </li>
                     </ul>
@@ -200,15 +194,15 @@
                 <h2 class="heading2">SKILLS</h2><br>
 
                 <p class="Paragraph">
-                    Now Coming To My Skills That Are HTML,CSS,JS And I Have Also Working On Some Projects Like
-                    Personal Portfolio Website,Personal Voice Assistant (JARVIS) And Some Basic HTML And CSS Projects I
-                    Will Upload All There Later in The Github Soon Releasing it.
-                    And Also I Will Eluburate it In Details in Skills Section.
+                    I'M Good In HTML,CSS,JS And I Have Also Working On Some Projects Like
+                    Personal Portfolio Website,Personal Voice Assistant (JARVIS) And Some Basic HTML And CSS Projects.
+                    I Will Upload All These Projects Soon in The Git-Hub.
                     And I Have Also Completed My Internship in Radiant it Services Pvt Ltd.
                     Where I Worked For 6Months As A Web Developer Intern.There I Have Been
                     Participated in pre-project analysis and technical assessments to validate creation of user-friendly
                     interface And,
                     Researched new programming languages,frameworks and technologies to stay abreast with latest trend.
+                    And Also Sarting A New Internship At Inflection Zone From 1 <sup>st</sup> Sept 2023.
                 </p>
                 <div class="Skills-Section">
                     <div class="Skills_Main">
@@ -224,7 +218,7 @@
                         <div class="skill_bar">
                             <div class="info">
                                 <p>CSS</p>
-                                <P>70%</P>
+                                <P>75%</P>
                             </div>
                             <div class="bar">
                                 <span class="css"></span>
@@ -246,26 +240,26 @@
                                 <P>70%</P>
                             </div>
                             <div class="bar">
-                                <span class="react"></span>
+                                <span class="cpp"></span>
                             </div>
                         </div>
 
                         <div class="skill_bar">
                             <div class="info">
                                 <p>BOOTSTRAP</p>
-                                <P>70%</P>
+                                <P>90%</P>
                             </div>
                             <div class="bar">
-                                <span class="express"></span>
+                                <span class="bootstrap"></span>
                             </div>
                         </div>
                         <div class="skill_bar">
                             <div class="info">
                                 <p>Angular</p>
-                                <P>60%</P>
+                                <P>70%</P>
                             </div>
                             <div class="bar">
-                                <span class="mongo"></span>
+                                <span class="angular"></span>
                             </div>
                         </div>
                     </div>
@@ -273,7 +267,7 @@
 
         </section>
 
-        <section id="Hobbies" <div>
+        <section id="Hobbies">
             <div class="Container5">
 
                 <h2 class="heading2">Hobbies</h2>
@@ -290,10 +284,9 @@
                         In This Perticular Section I Will Talk About My Experiences Related To Travelling That How And
                         Why I
                         Started That Journey Of Travelling & Places I have Visited And Much More:)
-                        And Here Also I Want To Add One Quote That is <br><b>Travelling Heals EveryThing..</b>
+                        And Here Also I Want To Add One Quote That is <b>Travelling Heals EveryThing..</b>
                     </p>
                 </div>
-
                 <div class="Sub-Container5">
                     <div class="Text">
                         <h1 class="heading2">Explore..Dream..Discover</h1>
@@ -321,7 +314,7 @@
                         <div class="Box COL-2" style="background-image: url(Images/Fort.jpeg);">FORTS</div>
                     </div>
                 </div>
-                <div>
+                <div class="Sub-Container5-B">
                     <h1 class="Paragraph heading2">प्रवास - अनुभव, वर्णन, वाचन आणि दर्शन!</h1>
                     <b class="paragraph MP">ध्यानी मनी आणि नियोजित नसताना अचानक आखलेले प्रवास म्हणजे अनेक आठवणींची ,
                         अनंत
@@ -336,7 +329,7 @@
                 <div class="Paragraph">
                     <div class="Accordian">
                         <div class="Question">
-                            <h3>४ जानेवारी २०२०(शिवनेरी)</h3>
+                            <h3 class="HA">४ जानेवारी २०२०(शिवनेरी)</h3>
                             <i class="icon fa-solid fa-caret-down"></i>
                         </div>
                         <div class="Answer">
@@ -381,7 +374,7 @@
                     </div>
                     <div class="Accordian">
                         <div class="Question">
-                            <h3>६ मार्च २०२०(राजगड)</h3>
+                            <h3 class="HA">६ मार्च २०२०(राजगड)</h3>
                             <i class="icon fa-solid fa-caret-down"></i>
                         </div>
                         <div class="Answer">
@@ -432,7 +425,7 @@
                     </div>
                     <div class="Accordian">
                         <div class="Question">
-                            <h3>२ ऑगस्ट २०२१(पाहिलं प्रेम)</h3>
+                            <h3 class="HA">२ ऑगस्ट २०२१(पाहिलं प्रेम)</h3>
                             <i class="icon fa-solid fa-caret-down"></i>
                         </div>
                         <div class="Answer">
@@ -462,7 +455,7 @@
                     </div>
                     <div class="Accordian">
                         <div class="Question">
-                            <h3>सातारा</h3>
+                            <h3 class="HA">सातारा</h3>
                             <i class="icon fa-solid fa-caret-down"></i>
                         </div>
                         <div class="Answer">
@@ -471,7 +464,7 @@
                     </div>
                     <div class="Accordian">
                         <div class="Question">
-                            <h3>कोल्हापूर </h3>
+                            <h3 class="HA">कोल्हापूर </h3>
                             <i class="icon fa-solid fa-caret-down"></i>
                         </div>
                         <div class="Answer">
@@ -480,7 +473,7 @@
                     </div>
                     <div class="Accordian">
                         <div class="Question">
-                            <h3>अष्टविनायक</h3>
+                            <h3 class="HA">अष्टविनायक</h3>
                             <i class="icon fa-solid fa-caret-down"></i>
                         </div>
                         <div class="Answer">
@@ -489,7 +482,7 @@
                     </div>
                     <div class="Accordian">
                         <div class="Question">
-                            <h3>संभाजीनगर </h3>
+                            <h3 class="HA">संभाजीनगर </h3>
                             <i class="icon fa-solid fa-caret-down"></i>
                         </div>
                         <div class="Answer">
@@ -498,7 +491,7 @@
                     </div>
                     <div class="Accordian">
                         <div class="Question">
-                            <h3>नाशिक </h3>
+                            <h3 class="HA">नाशिक </h3>
                             <i class="icon fa-solid fa-caret-down"></i>
                         </div>
                         <div class="Answer">
@@ -507,7 +500,7 @@
                     </div>
                     <div class="Accordian">
                         <div class="Question">
-                            <h3>पुणे </h3>
+                            <h3 class="HA">पुणे </h3>
                             <i class="icon fa-solid fa-caret-down"></i>
                         </div>
                         <div class="Answer">
@@ -516,7 +509,7 @@
                     </div>
                     <div class="Accordian">
                         <div class="Question">
-                            <h3>रायलिंग पठार </h3>
+                            <h3 class="HA">रायलिंग पठार </h3>
                             <i class="icon fa-solid fa-caret-down"></i>
                         </div>
                         <div class="Answer">
@@ -525,7 +518,7 @@
                     </div>
                     <div class="Accordian">
                         <div class="Question">
-                            <h3>लोणावळा डायरीज </h3>
+                            <h3 class="HA">लोणावळा डायरीज </h3>
                             <i class="icon fa-solid fa-caret-down"></i>
                         </div>
                         <div class="Answer">
@@ -534,7 +527,7 @@
                     </div>
                     <div class="Accordian">
                         <div class="Question">
-                            <h3>महाबळेश्वर डायरीज</h3>
+                            <h3 class="HA">महाबळेश्वर डायरीज</h3>
                             <i class="icon fa-solid fa-caret-down"></i>
                         </div>
                         <div class="Answer">
@@ -543,14 +536,14 @@
                     </div>
                     <div class="Accordian">
                         <div class="Question">
-                            <h3>कोकण डायरीज</h3>
+                            <h3 class="HA">कोकण डायरीज</h3>
                             <i class="icon fa-solid fa-caret-down"></i>
                         </div>
                         <div class="Answer">
                             <p> </p>
                         </div>
                     </div>
-                    <div class="Accordian">
+                    <!-- <div class="Accordian">
                         <div class="Question">
                             <h3></h3>
                             <i class="icon fa-solid fa-caret-down"></i>
@@ -558,8 +551,7 @@
                         <div class="Answer">
                             <p> </p>
                         </div>
-                    </div>
-
+                    </div> -->
                 </div>
             </div>
             </div>
@@ -567,10 +559,7 @@
 
         <section id="Contact">
             <div class="Container-6">
-
                 <h2 class="heading2">CONTACT ME</h2>
-                <br><br>
-
                 <div class="SubContainer6">
                     <div class="Left6">
                         <form action="">
@@ -593,7 +582,8 @@
                                 <img src="Images/Message.png" alt="">
                                 <textarea name="" id="" cols="30" rows="10" class="A6">Type Your Message..</textarea>
                             </div>
-                            <button class="BTN2">Send Message</button>
+                            <center><button class="BTN2">Send Message</button></center>
+
                         </form>
                     </div>
                     <div class="Right6">
@@ -632,9 +622,11 @@
                 <ul class="Social-icon">
                     <li><a href=""><img src="Images/Fb (3).png" alt="" height="50px" width="50px"></a></li>
                     <li><a href=""><img src="Images/Tw (2).png" alt="" height="50px" width="50px"></a></li>
-                    <li><a href=""><img src="Images/pngwing.com (4).png" alt="" height="60px" ></a></li>
                     <li><a href=""><img src="Images/Te.png" alt="" height="50px" width="50px"></a></li>
                     <li><a href=""><img src="Images/pngwing.com (6).png" alt="" height="60px" width="60px"></a></li>
+                    <br>
+                    <li><a href=""><img src="Images/Sn.png" alt="" height="50px"></a></li>
+                    <li><a href=""><img src="Images/In (2).png" alt="" height="50px"></a></li>
                 </ul>
                 <ul class="Menu">
                     <li><a href="#Home">Home</a></li>
@@ -648,7 +640,7 @@
             </div>
         </div>
     </footer>
-    <script src="script.js"></script>
+    
     <script src="javascript.js"></script>
 </body>
 
