--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </section>
 
         <section id="About">
-            <div class="Container2 ">
+            <div class="Container2">
                 <div class="About">
                     <h2 class="heading2">ABOUT</h2>
                     <br>
@@ -289,7 +289,7 @@
                 </div>
                 <div class="Sub-Container5">
                     <div class="Text">
-                        <h1 class="heading2">Explore..Dream..Discover</h1>
+                        <h1 class="heading2">Explore..Dream..Discover</h1><br>
                     </div>
                     <div class="Gallery">
                         <div class="BOX COL-2" style="background-image: url(Images/Eve.jpeg);">EVENING
@@ -324,7 +324,7 @@
                         फक्त श्वास घेत आहेत म्हणुन अस्तित्वात असतात . ते खर्‍या अर्थानं जगतंच नाहीत ; असे आपल्यासोबत
                         व्हायला
                         नको म्हणुनच आयुष्याचा प्रवास वसूल जगा ."</b>
-                </div>
+                </div><br>
 
                 <div class="Paragraph">
                     <div class="Accordian">
