--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Digvijay's Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="Images/pngwing.com(11).png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/7f4cf20331.js" crossorigin="anonymous"></script>
 </head>
 
