--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 </head>
 
 <body>
-
+    <!-- <div class="Intro">
+        <h1 class="Logo-Header">
+            <span class="LO"><big>W</big>el Come To_</span><span class="LO"><big> D</big>igvijay's Website.....
+            </span>
+        </h1>
+    </div> -->
     <header class="Header">
 
         <div class="Left1">
@@ -27,6 +32,7 @@
                     <li><a href="#Home" class="Active">Home</a></li>
                     <li><a href="#About">About</a></li>
                     <li><a href="#Education">Education</a></li>
+                    <li><a href="#Portfolio" aria-disabled="true">Portfolio</a></li>
                     <li><a href="#Skills">Skills</a></li>
                     <li><a href="#Hobbies">Hobbies</a></li>
                     <li><a href="#Contact">Contact</a></li>
@@ -39,7 +45,7 @@
 
         <section id="Home">
             <div class="Container">
-                <div>
+                <div class="ONE">
                     <h1 class="H1-MAIN">Hi,<br> I'm <span>Digvijay Rajebhosale....</span></h1>
                     <p>This is My Official Portfolio Website To Showcase My Work Related To Web Development. <br> I'M
                         Recent graduate looking for an opportunity in web development.</p><br>
@@ -69,7 +75,7 @@
                     <br>
                 </div>
                 <div class="Paragraph">
-                    My Name is<b>Digvijay Maheshkumar Rajebhosale.</b> I Am Native To Karjat,AilhyaNagar(414402).
+                    My Name is <b>Digvijay Maheshkumar Rajebhosale.</b> I Am Native To Karjat,AilhyaNagar(414402).
                     I Have Completed My <b> Bachlor Of Engineering In Computer Science</b> At Ajeenkya D Y Patil School
                     Of
                     Engineering With <b> 8.08 SGPA With First
@@ -114,10 +120,46 @@
             </div>
         </section>
 
+        <!-- <section id="Portfolio">
+            <div class="Portfolio-C">
+                <h1 class="heading2">Portfolio</h1>
+            </div>
+            <div class="P-C">
+                <div class="L">
+                    <img src="Images/VJl.gif" alt="JARVIS">
+                </div>
+                <div class="R">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est doloribus cupiditate iste tenetur totam
+                    autem numquam, sit cum repudiandae. Eos laudantium officiis, doloribus minima temporibus laborum
+                    dolorum ad quos similique.
+                </div>
+            </div>
+            <div class="P-C">
+                <div class="L">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est doloribus cupiditate iste tenetur totam
+                    autem numquam, sit cum repudiandae. Eos laudantium officiis, doloribus minima temporibus laborum
+                    dolorum ad quos similique.
+                </div>
+                <div class="R">
+                    <img src="Images/spotify-spotify-live.gif" alt="B" >
+               
+                </div>
+            </div>
+            <div class="P-C">
+                <div class="L">
+                    <img src="Images/7YyR.gif" alt="A">
+                </div>
+                <div class="R">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est doloribus cupiditate iste tenetur totam
+                    autem numquam, sit cum repudiandae. Eos laudantium officiis, doloribus minima temporibus laborum
+                    dolorum ad quos similique.
+                </div>
+            </div>
+
+        </section> -->
         <section id="Education">
             <div class="main">
                 <h3 class="heading">EDUCATION</h3>
-
                 <div class="container-Edu">
                     <ul>
                         <li>
@@ -129,7 +171,7 @@
                             <span class="date">2023</span>
                         </li>
                         <li>
-                            <h3 class="title">Nutan Jr College,Kuldharan,Karjat</h3>
+                            <h3 class="title titlee">Nutan Jr College,Kuldharan</h3>
                             <p class="paragraphe">I Have Completed My HSC From Nutan Jr College Kuldharan,Karjat With
                                 75.06%</p>
                             <a href="#">Read more..</a>
@@ -308,9 +350,9 @@
                             SCULPTURE</div>
                         <div class="Box Row-2" style="background-image: url(Images/RA.jpg);">MAHARAJ</div>
                         <div class="Box Row-2"
-                            style="background-image: url(Images/GALLERY/THE-ILAHI-LIFE/DSC_3529-01.jpeg);">
+                            style="background-image: url(Images/THE-I-L.jpeg);">
                             THE-ILAHI-LIFE</div>
-                        <div class="Box COL-2" style="background-image: url(Images/THE-I-L.jpeg);">NATURE
+                        <div class="Box COL-2" style="background-image: url(Images/Eve.jpeg);">NATURE
                         </div>
                         <div class="Box COL-2" style="background-image: url(Images/Fort.jpeg);">FORTS</div>
                     </div>
@@ -514,7 +556,30 @@
                             <i class="icon fa-solid fa-caret-down"></i>
                         </div>
                         <div class="Answer">
-                            <p> </p>
+                            <p><b>रायलिंग पठार (एक अविस्मरणीय प्रवास)</b>
+                                अचानक ठरलं आणि निसर्गाचा आस्वाद घेत प्रवासाला सुरुवात झाली..अगदीच जोशाने पुणे ते मोहरी
+                                पर्यंतचा रस्ता दुपारी तीन पर्यंत पार केला खरा पण आता ओढ होती ती सूर्यास्त रायलिंग
+                                पठारावरून अनुभवायची..मोहरी गावात गाडी लावून पायी प्रवास सुरू झाला; पुढे कसं जायचं याचा
+                                काही अंदाज नव्हता..एक कप चहा पिऊन पायी वाटचाल सुरू केली.. तिथून अजून दोन सोबती जणू
+                                आमच्या रक्षणासाठीच बरोबर निघाले..पुढे दिसत होता अथांग ढगांमध्ये बुडालेला लिंगाणा....
+                                गप्पांमध्ये गुंतल्यामुळे ते अंतर सहजच पार झाले अखेर रायलिंग पठारावर पोहोचलो, पाहतो तर
+                                काय.. पुढ्यात उभा असलेला लिंगाणा धुक्यात अतिशय सुंदर दिसत होता..त्याचपलीकडे कोकणात
+                                डोकावल्यासारखं वाटलं आणि रायगडाचे दर्शन झालं..तिथे गेल्याचं सार्थ झालं होतं.. तिथले क्षण
+                                डोळ्यात आणि कॅमेरा मध्ये साठवण्यात वेळ कसा गेला समजलच नाही..
+                                आभाळ भरून आलं होतं, आम्ही निघण्याच्या तयारीला लागलो आता परतीच्या वाटेकडे आणि आभाळाकडे
+                                डोळे लागले होते, नागमोडी वाटेवर पावली झपाझप पडत होती दिसेल त्या वाटेवर वळत होती.अंधार
+                                डोकावत होता..जंगलाची वाट सुरू होती..पावलांचा वेग वाढत होता आणि तसंच टीप टीप पाऊस बसायला
+                                लागला.. यातचं वाट चुकली समोर काही दिसेना झालं.. पावसात घाम फुटायला लागला..डोळे भरून आले
+                                आता जंगलात आवाज येऊ लागले..तसा घशातून आवाज निघाला कोणी आहे का तिकडे??
+                                तरी आवाज उत्तर ऐकू येईना.. डोळे फक्त निवारा शोधत होती.. पावले घसरत होती‌..नजरेस वाट दिसत
+                                नव्हती..अखेर एक झोपडी दिसली पावलांचा वेग वाढला आणि घराच्या जवळ जाऊन थांबला, आरोळी दिली
+                                तर आजी बाहेर आली..आजीला पाहताच मिठी मारली, थरथरणारा मायेचा हात जेव्हा तिने डोक्यावरून
+                                फिरवला तेव्हा कुठे जीवात जीव आला.. सुटकेचा श्वास घेतला..त्या घनदाट जंगलात आम्हाला निवारा
+                                मिळाला होता. एक भला माणूस बॅटरीच्या उजेडात आम्हाला सोडायला आला..अखेर गाडी पर्यंत सुखरूप
+                                त्या देव माणसाने आम्हाला पोहोचवले..
+                                ऑनलाइनच्या या युगात धन्यवाद म्हणण्यापलीकडे त्यांना द्यायला आमच्याकडे काहीच
+                                नव्हते.- ऐश्वर्या जगताप
+                            </p>
                         </div>
                     </div>
                     <div class="Accordian">
@@ -641,8 +706,10 @@
             </div>
         </div>
     </footer>
-    
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="javascript.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
