--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 </head>
 
 <body>
-    <!-- <div class="Intro">
+    <div class="Intro">
         <h1 class="Logo-Header">
             <span class="LO"><big>W</big>el Come To_</span><span class="LO"><big> D</big>igvijay's Website.....
             </span>
+            <img src="Images/pngwing.com(11).png" alt=""  height="200px" style="margin-left: 200px;">
         </h1>
-    </div> -->
+    </div>
     <header class="Header">
 
         <div class="Left1">
@@ -47,7 +48,7 @@
             <div class="Container">
                 <div class="ONE">
                     <h1 class="H1-MAIN">Hi,<br> I'm <span>Digvijay Rajebhosale....</span></h1>
-                    <p>This is My Official Portfolio Website To Showcase My Work Related To Web Development. <br> I'M
+                    <p class="P-MAIN">This is My Official Portfolio Website To Showcase My Work Related To Web Development. <br> I'M
                         Recent graduate looking for an opportunity in web development.</p><br>
                     <button class="HeadBTN"><a href="DIGVIJAY_RAJEBHOSALE_BE_2023.pdf" download>DOWNLOAD
                             CV</a></button><br><br>
@@ -184,7 +185,7 @@
                             <a href="#">Read more..</a>
                             <span class="date">2017</span>
                         </li>
-                        <li>
+                        <li class="DD">
                             <h3 class="title">Shri Ravishankar Vidyamandir,Karjat</h3>
                             <p class="paragraphe">I Had Done My Education Of Junior-KG To 4th From Shri Ravishankar
                                 Vidyamandir,Karjat</p>
@@ -702,7 +703,7 @@
                     <li><a href="#Hobbies">Hobbies</a></li>
                     <li><a href="#Contact">Contact</a></li>
                 </ul>
-                <p>@2023 DR, All Rights Reserved</p>
+                <p class="S">@2023 DR, All Rights Reserved</p>
             </div>
         </div>
     </footer>
